--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         const prospects = [
             {
                 id: 1,
-                name: "Client Immobilier Paris",
-                description: "Prospection pour le secteur résidentiel luxe.",
-                url: "prospection-paris.html",
-                icon: "🏢",
-                category: "Immobilier"
+                name: "court bouillon rambouillet",
+                description: "resto culturel https://www.lecourtbouillon.fr/  https://www.google.com/maps/place/Le+Court-Bouillon/@48.6524067,1.833972,19z/data=!3m1!5s0x47e426c30c8168b7:0x2c31e6a6ae707c38!4m6!3m5!1s0x47e4279ed67d4d97:0x5457263451dfda4e!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
+                url: "courtbouillon.html",
+                icon: "🍽️",
+                category: "Restaurant"
             },
             {
                 id: 2,
