Update entry for Studio Rambouillet Danses
Replaced 'Startup Tech Lyon' entry with 'Studio Rambouillet Danses' including updated description, URL, icon, and category.

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             },
             {
                 id: 2,
-                name: "Startup Tech Lyon",
-                description: "Offre de services SaaS pour jeunes entreprises.",
-                url: "prospection-tech.html",
-                icon: "🚀",
-                category: "Tech"
+                name: "Studio Rambouillet Danses.",
+                description: "Des cours de danse organisés par une madame privée.  https://www.studio-rambouillet.com/studiorambouilletdanse  https://www.google.com/maps/place/Studio+Rambouillet/@48.6513064,1.8334264,18.17z/data=!3m1!5s0x47e426c3a2e24783:0xc67f5422968ae1d!4m14!1m7!3m6!1s0x47e4279ed67d4d97:0x5457263451dfda4e!2sLe+Court-Bouillon!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm!3m5!1s0x47e42717dee53c4d:0xae95403bc4a67c3c!8m2!3d48.6517106!4d1.8362487!16s%2Fg%2F11k1lxxgf4?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
+                url: "rambouilletdanse.html",
+                icon: "💃",
+                category: "Art"
             },
             {
                 id: 3,
