Modify prospect entries in index.html
Updated descriptions and names for various prospects, including adding a new entry for a sophrologist.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             {
                 id: 1,
                 name: "court bouillon rambouillet",
-                description: "resto culturel https://www.lecourtbouillon.fr/  https://www.google.com/maps/place/Le+Court-Bouillon/@48.6524067,1.833972,19z/data=!3m1!5s0x47e426c30c8168b7:0x2c31e6a6ae707c38!4m6!3m5!1s0x47e4279ed67d4d97:0x5457263451dfda4e!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
+                description: "resto culturel contacte via insta https://www.lecourtbouillon.fr/  https://www.google.com/maps/place/Le+Court-Bouillon/@48.6524067,1.833972,19z/data=!3m1!5s0x47e426c30c8168b7:0x2c31e6a6ae707c38!4m6!3m5!1s0x47e4279ed67d4d97:0x5457263451dfda4e!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
                 url: "courtbouillon.html",
                 icon: "🍽️",
                 category: "Restaurant"
@@ -94,18 +94,18 @@
             {
                 id: 2,
                 name: "Studio Rambouillet Danses.",
-                description: "Des cours de danse organisés par une madame privée.  https://www.studio-rambouillet.com/studiorambouilletdanse  https://www.google.com/maps/place/Studio+Rambouillet/@48.6513064,1.8334264,18.17z/data=!3m1!5s0x47e426c3a2e24783:0xc67f5422968ae1d!4m14!1m7!3m6!1s0x47e4279ed67d4d97:0x5457263451dfda4e!2sLe+Court-Bouillon!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm!3m5!1s0x47e42717dee53c4d:0xae95403bc4a67c3c!8m2!3d48.6517106!4d1.8362487!16s%2Fg%2F11k1lxxgf4?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
+                description: "Des cours de danse organisés par une madame privée. contacte par mail  https://www.studio-rambouillet.com/studiorambouilletdanse  https://www.google.com/maps/place/Studio+Rambouillet/@48.6513064,1.8334264,18.17z/data=!3m1!5s0x47e426c3a2e24783:0xc67f5422968ae1d!4m14!1m7!3m6!1s0x47e4279ed67d4d97:0x5457263451dfda4e!2sLe+Court-Bouillon!8m2!3d48.6524068!4d1.8343528!16s%2Fg%2F11rvx9stpm!3m5!1s0x47e42717dee53c4d:0xae95403bc4a67c3c!8m2!3d48.6517106!4d1.8362487!16s%2Fg%2F11k1lxxgf4?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
                 url: "rambouilletdanse.html",
                 icon: "💃",
                 category: "Art"
             },
             {
                 id: 3,
-                name: "Restauration Bordeaux",
-                description: "Campagne pour les restaurateurs de Gironde.",
-                url: "prospection-food.html",
+                name: "Sophrologue",
+                description: "une sophorlogue. contactee par mail. https://sophrologierambouilletflolachaussee.blogspot.com/p/me-contacter.html  https://www.google.com/maps/place/Sophrologue+Florence+Lachauss%C3%A9e/@48.6490341,1.8197069,18.2z/data=!4m6!3m5!1s0x47e426cb9565cf4b:0x3d362ed29e726818!8m2!3d48.6485522!4d1.8208116!16s%2Fg%2F11b6dfzsql?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D",
+                url: "sophro.html",
                 icon: "🍴",
-                category: "Services"
+                category: "medic"
             },
             {
                 id: 4,
