Update demo URL and add new yoga entry

--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@
                 icon: "🌿",
                 contact: "Email / Tel",
                 notes: "Sophrologue spécialisée en cohérence cardiaque. Site actuel sur Blogger à refondre.",
-                urlDemo: "index_sophro.html",
+                urlDemo: "sophro.html",
                 urlOriginal: "https://sophrologierambouilletflolachaussee.blogspot.com/",
                 urlMaps: "https://www.google.com/maps/search/Florence+Lachaussée+Rambouillet"
             },
             {
                 id: 4,
-                name: "E-commerce Global",
-                category: "E-commerce",
-                icon: "🛒",
-                contact: "LinkedIn",
-                notes: "Prospection ciblant les boutiques sous Shopify & Prestashop en local.",
-                urlDemo: "#",
-                urlOriginal: "",
-                urlMaps: ""
+                name: "Yoga yvelines",
+                category: "Sport/Bien etre",
+                icon: "🌿",
+                contact: "Email",
+                notes: "Pour refaire leur page d'accueil pour leur truc de yoga quoi.",
+                urlDemo: "yoga.html",
+                urlOriginal: "https://cercledeyogadesyvelines.jimdofree.com/",
+                urlMaps: "https://www.google.com/maps/place/Cercle+de+Yoga+Des+Yvelines/@48.6502386,1.8214553,18.2z/data=!3m1!5s0x47e426cea73534bd:0x8f908b4d022600e5!4m6!3m5!1s0x47e426cc1e0c5375:0x2f5aa0b8d4e29c6f!8m2!3d48.6506566!4d1.8228284!16s%2Fg%2F11bccjsw6c?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
             }
         ];
 
