Refactor styles and enhance mobile menu behavior
Updated styles and improved mobile menu functionality.

--- a/yoga.html
+++ b/yoga.html
@@ -26,9 +26,9 @@
             font-family: 'Cormorant Garamond', serif;
         }
 
-        /* Effet de fondu sur l'image (Hero) avec transition vers le crème */
+        /* Effet de fondu sur l'image (Hero) */
         .hero-bg {
-            background-image: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(253,251,250,1)), 
+            background-image: linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(253,251,250,1)), 
                               url('https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?auto=format&fit=crop&q=80&w=2000');
             background-size: cover;
             background-position: center;
@@ -51,9 +51,10 @@
             transform: translateY(0);
         }
 
+        /* Animation du menu mobile */
         #mobile-menu-overlay {
             clip-path: circle(0% at 100% 0%);
-            transition: clip-path 0.5s ease-in-out;
+            transition: clip-path 0.6s cubic-bezier(0.77, 0, 0.175, 1);
         }
         #mobile-menu-overlay.open {
             clip-path: circle(150% at 100% 0%);
@@ -63,11 +64,10 @@
 <body class="antialiased">
 
     <!-- NAVIGATION -->
-    <nav id="navbar" class="fixed w-full z-[100] transition-all duration-500 py-4 px-6 md:px-12">
+    <nav id="navbar" class="fixed w-full z-[110] transition-all duration-500 py-4 px-6 md:px-12">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-3">
-                <!-- Badge avec CYDY -->
-                <div id="nav-badge" class="min-w-[50px] md:min-w-[60px] h-10 md:h-12 border-2 border-white rounded-full flex items-center justify-center font-serif italic text-lg md:text-xl text-white transition-colors px-3">CYDY</div>
+                <div id="nav-badge" class="min-w-[55px] md:min-w-[65px] h-10 md:h-12 border-2 border-white rounded-full flex items-center justify-center font-serif italic text-lg md:text-xl text-white transition-colors px-2">CYDY</div>
                 <div class="flex flex-col">
                     <span id="nav-title" class="text-sm md:text-base font-bold tracking-[0.1em] text-white transition-colors uppercase leading-none">Cercle De Yoga</span>
                     <span id="nav-subtitle" class="text-[9px] md:text-[10px] uppercase tracking-[0.2em] text-white/80 transition-colors">Des Yvelines</span>
@@ -83,20 +83,20 @@
                 <a href="#contact" class="bg-white text-emerald-950 px-6 py-3 rounded-full hover:bg-emerald-50 transition-all shadow-md">Contact</a>
             </div>
 
-            <!-- Mobile Button -->
-            <button class="lg:hidden p-2 z-[110] text-white transition-colors" id="mobile-btn">
-                <i data-lucide="menu" id="menu-icon" class="w-6 h-6"></i>
+            <!-- Mobile Button - Toujours visible avec un z-index supérieur -->
+            <button class="lg:hidden p-2 z-[120] text-white transition-all duration-300" id="mobile-btn">
+                <i data-lucide="menu" id="menu-icon" class="w-7 h-7"></i>
             </button>
         </div>
     </nav>
 
     <!-- MOBILE MENU OVERLAY -->
-    <div id="mobile-menu-overlay" class="fixed inset-0 z-[105] bg-white flex flex-col items-center justify-center gap-8 lg:hidden">
-        <a href="#actu" class="text-3xl font-serif italic text-slate-900">L'Actualité</a>
-        <a href="#evenements" class="text-3xl font-serif italic text-slate-900">Les Événements</a>
-        <a href="#notre-yoga" class="text-3xl font-serif italic text-slate-900">Notre Yoga</a>
-        <a href="#cours" class="text-3xl font-serif italic text-slate-900">Cours & Tarifs</a>
-        <a href="#contact" class="px-10 py-4 bg-emerald-800 text-white rounded-full font-bold uppercase tracking-widest text-sm mt-4">Contact</a>
+    <div id="mobile-menu-overlay" class="fixed inset-0 z-[115] bg-white flex flex-col items-center justify-center gap-10 lg:hidden">
+        <a href="#actu" class="mobile-link text-3xl font-serif italic text-slate-900 hover:text-emerald-800">L'Actualité</a>
+        <a href="#evenements" class="mobile-link text-3xl font-serif italic text-slate-900 hover:text-emerald-800">Les Événements</a>
+        <a href="#notre-yoga" class="mobile-link text-3xl font-serif italic text-slate-900 hover:text-emerald-800">Notre Yoga</a>
+        <a href="#cours" class="mobile-link text-3xl font-serif italic text-slate-900 hover:text-emerald-800">Cours & Tarifs</a>
+        <a href="#contact" class="mobile-link px-10 py-4 bg-emerald-800 text-white rounded-full font-bold uppercase tracking-widest text-sm mt-4 shadow-xl">Contact</a>
     </div>
 
     <!-- HERO SECTION -->
@@ -109,8 +109,7 @@
             <h1 class="text-5xl md:text-8xl font-serif italic mb-8 leading-[1.1] text-white drop-shadow-lg">
                 Respirez profondément, <br>étreignez l'instant présent.
             </h1>
-            <!-- Texte plus foncé et plus lisible -->
-            <p class="text-xl md:text-3xl text-slate-800 mb-12 font-semibold italic max-w-2xl mx-auto">
+            <p class="text-xl md:text-3xl text-slate-900 mb-12 font-bold italic max-w-2xl mx-auto drop-shadow-sm">
                 "C'est là que réside la clé de la paix intérieure."
             </p>
             <div class="flex flex-col sm:flex-row gap-5 justify-center">
@@ -126,7 +125,7 @@
 
     <!-- ACTUALITÉS & BULLETIN -->
     <section id="actu" class="py-24 px-6 max-w-6xl mx-auto">
-        <div class="grid lg:grid-cols-3 gap-12">
+        <div class="grid lg:grid-cols-3 gap-12 text-left">
             <div class="lg:col-span-2 reveal">
                 <div class="bg-white rounded-[3rem] p-10 md:p-14 shadow-sm border border-slate-200 relative overflow-hidden">
                     <div class="relative z-10">
@@ -136,7 +135,7 @@
                             <p>Le Cercle de Yoga des Yvelines est heureux de vous accueillir pour cette nouvelle saison. Que vous soyez débutant ou pratiquant confirmé, notre association vous propose un cadre serein pour votre pratique.</p>
                             <div class="p-6 bg-slate-50 rounded-2xl border-l-4 border-emerald-800 text-base">
                                 <p class="font-bold text-emerald-900 mb-2 italic text-lg">Information Reprise :</p>
-                                <p class="text-slate-900 font-bold">Les séances ont repris depuis le 1er septembre. Il reste quelques places sur certains créneaux ! N'hésitez pas à nous contacter pour un cours d'essai.</p>
+                                <p class="text-slate-950 font-bold">Les séances ont repris depuis le 1er septembre. Il reste quelques places sur certains créneaux ! N'hésitez pas à nous contacter pour un cours d'essai.</p>
                             </div>
                         </div>
                     </div>
@@ -144,12 +143,12 @@
             </div>
             
             <div class="reveal delay-200">
-                <div class="bg-white rounded-[3rem] p-10 border border-slate-200 flex flex-col h-full shadow-sm">
+                <div class="bg-white rounded-[3rem] p-10 border border-slate-200 flex flex-col h-full shadow-sm text-left">
                     <div class="w-16 h-16 bg-emerald-800 text-white rounded-2xl flex items-center justify-center mb-8 shadow-lg">
                         <i data-lucide="file-text" class="w-8 h-8"></i>
                     </div>
                     <h4 class="text-xl font-bold text-slate-900 mb-4">Inscription 2025-2026</h4>
-                    <p class="text-sm text-slate-600 mb-8 flex-grow leading-relaxed text-slate-800">Téléchargez le bulletin d'adhésion et d'inscription pour la saison en cours au format PDF.</p>
+                    <p class="text-sm text-slate-700 mb-8 flex-grow leading-relaxed">Téléchargez le bulletin d'adhésion et d'inscription pour la saison en cours au format PDF.</p>
                     <a href="#" class="w-full py-4 bg-slate-900 text-white rounded-xl font-bold uppercase tracking-widest text-xs flex items-center justify-center gap-3 hover:bg-black transition-all">
                         <i data-lucide="download" class="w-4 h-4 text-emerald-400"></i> Bulletin (238 KB)
                     </a>
@@ -160,8 +159,8 @@
 
     <!-- NOTRE YOGA -->
     <section id="notre-yoga" class="py-24 bg-slate-100/80 px-6">
-        <div class="max-w-6xl mx-auto">
-            <div class="grid lg:grid-cols-2 gap-20 items-center mb-20">
+        <div class="max-w-6xl mx-auto text-left">
+            <div class="grid lg:grid-cols-2 gap-20 items-center mb-20 text-left">
                 <div class="reveal">
                     <h2 class="text-sm font-black text-emerald-800 uppercase tracking-[0.3em] mb-6 italic">Philosophie</h2>
                     <h3 class="text-4xl md:text-5xl font-serif italic mb-8 leading-tight text-slate-900">Un enseignement fidèle aux huit piliers du Yoga.</h3>
@@ -175,13 +174,12 @@
                         </div>
                         <div>
                             <p class="font-bold text-slate-900 text-base">Cécile & l'équipe pédagogique</p>
-                            <p class="text-xs text-emerald-900 font-extrabold uppercase tracking-widest leading-none mt-1">Formateurs certifiés</p>
+                            <p class="text-xs text-emerald-900 font-extrabold uppercase tracking-widest mt-1 leading-none">Formateurs certifiés</p>
                         </div>
                     </div>
                 </div>
                 
                 <div class="grid grid-cols-2 gap-4 reveal">
-                    <!-- Les 8 Piliers fixés -->
                     <div class="p-6 bg-white border border-slate-300 rounded-3xl text-center shadow-sm">
                         <h4 class="font-bold text-slate-900 mb-1">Yama</h4>
                         <p class="text-[10px] text-emerald-800 uppercase font-black tracking-widest">Vie Sociale</p>
@@ -221,9 +219,9 @@
 
     <!-- CONTACT -->
     <section id="contact" class="py-24 px-6 max-w-6xl mx-auto">
-        <div class="bg-white rounded-[4rem] p-10 md:p-20 shadow-2xl border border-slate-300 overflow-hidden relative">
+        <div class="bg-white rounded-[4rem] p-10 md:p-20 shadow-2xl border border-slate-300 overflow-hidden relative text-left">
             <div class="relative z-10 grid lg:grid-cols-2 gap-16 items-center">
-                <div>
+                <div class="text-left">
                     <h2 class="text-4xl md:text-5xl font-serif italic mb-8 text-slate-900">Nous contacter</h2>
                     <p class="text-lg text-slate-900 mb-10 font-bold leading-relaxed">
                         Pour tout renseignement sur la pratique ou pour finaliser votre inscription, notre équipe est à votre écoute.
@@ -233,7 +231,7 @@
                             <div class="w-12 h-12 bg-emerald-800 text-white rounded-xl flex items-center justify-center shrink-0 shadow-lg">
                                 <i data-lucide="user"></i>
                             </div>
-                            <div>
+                            <div class="text-left">
                                 <p class="text-[10px] font-black uppercase text-slate-500 tracking-[0.2em]">Contact Professeur</p>
                                 <p class="text-xl font-bold text-slate-900 leading-none">Cécile Boutier</p>
                             </div>
@@ -246,18 +244,18 @@
                         <div class="w-12 h-12 bg-white/10 rounded-xl flex items-center justify-center group-hover:bg-emerald-500 transition-colors">
                             <i data-lucide="phone" class="w-5 h-5"></i>
                         </div>
-                        <div class="flex-grow">
+                        <div class="flex-grow text-left">
                             <p class="text-[9px] uppercase font-bold tracking-widest text-white/50 leading-none mb-1">Appeler</p>
                             <p class="text-lg font-bold italic">06.60.11.91.78</p>
                         </div>
                     </a>
-                    <a href="mailto:cydy78120@gmail.com" class="flex items-center gap-5 p-6 bg-white border-2 border-slate-300 text-slate-900 rounded-[2rem] hover:border-emerald-800 transition-all group">
-                        <div class="w-12 h-12 bg-slate-100 rounded-xl flex items-center justify-center group-hover:bg-emerald-800 group-hover:text-white transition-colors">
+                    <a href="mailto:cydy78120@gmail.com" class="flex items-center gap-5 p-6 bg-white border-2 border-slate-200 text-slate-900 rounded-[2rem] hover:border-emerald-800 transition-all group">
+                        <div class="w-12 h-12 bg-slate-100 rounded-xl flex items-center justify-center group-hover:bg-emerald-800 group-hover:text-white transition-colors text-left">
                             <i data-lucide="mail" class="w-5 h-5"></i>
                         </div>
                         <div class="flex-grow text-left">
                             <p class="text-[9px] uppercase font-bold tracking-widest text-slate-500 leading-none mb-1">Email Association</p>
-                            <p class="text-lg font-bold">cydy78120@gmail.com</p>
+                            <p class="text-lg font-bold text-left">cydy78120@gmail.com</p>
                         </div>
                     </a>
                 </div>
@@ -287,8 +285,13 @@
         const navSubtitle = document.getElementById('nav-subtitle');
         const navBadge = document.getElementById('nav-badge');
         const mobileBtn = document.getElementById('mobile-btn');
+        const overlay = document.getElementById('mobile-menu-overlay');
+        const icon = document.getElementById('menu-icon');
+        let isOpen = false;
 
         window.addEventListener('scroll', () => {
+            if (isOpen) return; // Ne pas changer la couleur si le menu est ouvert
+
             if (window.scrollY > 50) {
                 navbar.classList.add('glass-nav', 'py-3');
                 navbar.classList.remove('py-4');
@@ -318,24 +321,39 @@
             }
         });
 
-        // Mobile Menu
-        const btn = document.getElementById('mobile-btn');
-        const overlay = document.getElementById('mobile-menu-overlay');
-        const icon = document.getElementById('menu-icon');
-        let isOpen = false;
-
-        btn.addEventListener('click', () => {
+        // Mobile Menu Logic
+        function toggleMenu() {
             isOpen = !isOpen;
             if (isOpen) {
                 overlay.classList.add('open');
                 icon.setAttribute('data-lucide', 'x');
+                // Forcer le bouton en noir intense sur fond blanc
+                mobileBtn.classList.remove('text-white');
+                mobileBtn.classList.add('text-slate-900');
                 document.body.style.overflow = 'hidden';
             } else {
                 overlay.classList.remove('open');
                 icon.setAttribute('data-lucide', 'menu');
+                // Restaurer la couleur selon le scroll actuel
+                if (window.scrollY > 50) {
+                    mobileBtn.classList.add('text-slate-900');
+                    mobileBtn.classList.remove('text-white');
+                } else {
+                    mobileBtn.classList.add('text-white');
+                    mobileBtn.classList.remove('text-slate-900');
+                }
                 document.body.style.overflow = '';
             }
             lucide.createIcons();
+        }
+
+        mobileBtn.addEventListener('click', toggleMenu);
+
+        // Fermeture automatique au clic sur un lien mobile
+        overlay.querySelectorAll('.mobile-link').forEach(link => {
+            link.addEventListener('click', () => {
+                if(isOpen) toggleMenu();
+            });
         });
 
         // Scroll Reveal
